--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>TAINÁ SILVEIRA</h1>
     <p>estou aprendendo a mexer no github</p>
     <h3>Filó dengo luna mimo</h3>
+
+
+    <ul>
+        <li>arroz</li>
+        <li>feijão</li>
+    </ul>
+
+
 </body>
+
 </html>
