--- a/index.html
+++ b/index.html
@@ -6,18 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="" href="">
 </head>
 
 <body>
-    <h1>TAINÁ SILVEIRA</h1>
-    <p>estou aprendendo a mexer no github</p>
-    <h3>Filó dengo luna mimo</h3>
-
-
-    <ul>
-        <li>arroz</li>
-        <li>feijão</li>
-    </ul>
+    
 
 
 </body>
